--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,11 @@
       "inputs": ["$TURBO_DEFAULT$", ".env"],
       "outputLogs": "new-only"
     },
+    "start": {
+      "cache": false,
+      "dependsOn": ["^build"],
+      "persistent": true
+    },
     "docs#build": {
       "dependsOn": ["api:generate"],
       "outputs": ["build/**"],
@@ -66,3 +71,4 @@
     }
   }
 }
+
