--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "dotenv -e ./.env -e ../../.env -- next dev -p 3000",
     "build": "dotenv -e ./.env -e ../../.env -- next build",
-    "start": "dotenv -e ./.env -e ../../.env -- next start",
+    "start": "dotenv -e ./.env -e ../../.env -- next start -p 3000",
     "test": "dotenv -e ./.env -e ../../.env -- playwright test",
     "test:show-report": "playwright show-report src/test/reporters",
     "test:ui": "dotenv -e ./.env -e ../../.env -- playwright test --ui"
