--- a/apps/viewer/package.json
+++ b/apps/viewer/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "dotenv -e ./.env -e ../../.env  -- next dev -p 3001",
     "build": "dotenv -e ./.env -e ../../.env -- next build",
-    "start": "dotenv -e ./.env -e ../../.env -- next start",
+    "start": "dotenv -e ./.env -e ../../.env -- next start -p 3002",
     "test": "dotenv -e ./.env -e ../../.env -- playwright test",
     "test:report": "playwright show-report",
     "test:ui": "dotenv -e ./.env -e ../../.env -- playwright test --ui"
