--- a/turbo.json
+++ b/turbo.json
@@ -13,20 +13,24 @@
     "build": {
       "env": ["VERCEL_*", "NEXTAUTH_URL", "SENTRY_*", "LANDING_PAGE_URL"],
       "dependsOn": ["^build", "^db:generate"],
-      "outputs": [
-        ".next/**",
-        "!.next/cache/**",
-        "dist/**",
-        "build/**",
-        "public/__ENV.js",
-        ".vercel"
-      ],
+      "outputs": [],
       "inputs": ["$TURBO_DEFAULT$", ".env"],
+      "cache": false, 
       "outputLogs": "new-only"
+    },
+    "build:builder": {
+      "cache": false,
+      "dependsOn": [],
+      "command": "cd apps/builder && bun run build"
+    },
+    "build:viewer": {
+      "cache": false,
+      "dependsOn": [],
+      "command": "cd apps/viewer && bun run build"
     },
     "start": {
       "cache": false,
-      "dependsOn": ["^build"],
+      "dependsOn": ["build:builder", "build:viewer"],
       "persistent": true
     },
     "docs#build": {
